# plugin-freedom-system

./: CMakeLists.txt  PLUGINS.md
.claude/aesthetics/swiss-minimal-001/: metadata.json
.github/workflows/: main.yml
plugins/Nebula/: .continue-here.md
plugins/Nebula/.ideas/: architecture.md  creative-brief.md  parameter-spec-draft.md  parameter-spec.md  plan.md
plugins/Nebula/.ideas/mockups/: v1-CMakeLists-SNIPPET.txt  v1-PluginEditor-TEMPLATE.cpp  v1-PluginEditor-TEMPLATE.h  v1-integration-checklist.md  v1-ui-test.html  v1-ui.html  v1-ui.yaml
